src/styles/main.scss
@import 'compass';
@import 'icons';
@import 'normalize';
@import 'solarized-dark';
@import "http://fonts.googleapis.com/css?family=Arvo";

$offBlack: hsl(0, 0, 5%);

@mixin breakpoint($point) {
  @if $point == big-phone {
    @media (max-width: 1000px) { @content; }
  }
  @else if $point == small-phone {
    @media (max-width: 630px)  { @content; }
  }
}

$codeFont: Consolas, "Lucida Console", monospace;

@mixin mainShadow {
  @include box-shadow(0 0 3px 0 rgba(0, 0, 0, 0.5));
}

* {
  @include box-sizing(border-box);
}

body {
  font-family: Arvo;
  font-size: 16px;
  color: $offBlack;
  background: hsl(0, 0%, 82%);
  @include mainShadow;
  @include breakpoint(big-phone) {
    font-size: 14px;
  }
}

.ribbon {
  @include breakpoint(small-phone) {
    display: none;
  }
}

.center {

  background: white;
  @include mainShadow;
  position: relative;
  z-index: 101;
  max-width: 760px;
  width: 92%;
  margin: 0 auto;
  padding: 30px 70px 45px;

  @include breakpoint(big-phone) {
    width: 94%;
    margin-left: 0 2%;
    padding: 20px 50px;
  }

  @include breakpoint(small-phone) {
    width: 100%;
    margin: 0;
    padding: 20px 20px;
  }

  p {
    line-height: 1.6em;
    font-size: 1.2em;
  }

  .anchor {
    color: $offBlack;
  }

  a {
    color: #4183CD;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }

  .anchor {
    position: absolute;
    margin-left: -1.7em;
    padding-left: 1.7em;

    &:focus {
      outline: none;
    }

    &:hover {
      text-decoration: none;
    }
  }
}

.cabin {
  position: absolute;
  width: 130px;

  @include breakpoint(big-phone) {
    width: 115px;
  }

  @include breakpoint(small-phone) {
    display: none;
  }
}

.title {
  margin: 0;
  padding: 15px 0 .2em;
  text-align: center;
  font-size: 6em;
  @include breakpoint(small-phone) {
    font-size: 6em;
    padding-top: 0;
  }
}

p code {
  background: hsl(240, 100%, 96%);
  border: 1px solid hsl(0, 0%, 90%);
  padding: 0 0.23em;
  font-size: .8em;
  @include border-radius(3px);
}

code {
  margin: 0;
  padding: 0;
  font-family: $codeFont;
}

pre {
  font-family: $codeFont;
  overflow: auto;
  white-space: pre;
}

.highlight, .cli-code {
  font-size: 1.1em;
  line-height: 1.5em;
  background: hsl(247, 14%, 11%);
  color: hsl(0, 0%, 73%);

  pre {
    padding: 25px;
  }
}

textarea {
  resize: none;
}

.cli-code {
  width: 100%;
  white-space: nowrap;
  overflow-x: auto;
  overflow-y: hidden;
  padding: 23px;
  line-height: 34px;
  font-family: monospace;
  height: 82px;
}

blockquote {
  border-left: 4px solid hsl(0, 0%, 87%);
  padding: 0 15px;
  color: hsl(0, 0%, 47%);
}

.theme-wrapper {
  width: 100%;
  margin: 30px 0;
  display: block;
  position: relative;
  cursor: pointer;
  border: 10px solid hsl(0, 0%, 54%);
  @include mainShadow;
}

.theme-img {
  width: 100%;
  float: right;
  @include mainShadow;
}

// Clearfix
.group:after {
  content: "";
  display: table;
  clear: both;
}

h1, h2, h3,
h4, h5, h6 {
  &:hover .header-link {
    visibility: visible;
  }
}

.header-link {
  @extend .icon-link;
  margin-left: -1.7em;
  font-size: .65em;
  visibility: hidden;
}

